2015-02-02  Richard Frith-Macdonald <rfm@gnu.org>

	* EcAlerter.h: Add options for time-limiting rule activity
	* EcAlerter.m: Implement those options
	* EcProcess.m: Put debug logs in 'DebugLogs' by default.
	* EcCommand.m: Put our logs in 'Logs' by default.
	* EcControl.m: Put our logs in 'Logs' by default.
	Change default logging locations.
	*GNUmakefile: bump version for release

2015-02-02  Richard Frith-Macdonald <rfm@gnu.org>

        * EcAlarmDestination.m: When coalescing alarms, do not coalesce a
	clear with anything other than an earlier clear for the same event.
	We do not want to risk forwarding a clear without a preceding
	event raising the alarm.

2015-01-26  Richard Frith-Macdonald <rfm@gnu.org>

        * GNUmakefile.preamble: fixup gcc flag filtering
        * EcClientI.h:
        * EcClientI.m:
        * EcCommand.m:
        * EcControl.m:
        * EcProcess.h:
        * EcProcess.m:
        Implement forced kill by -terminate method if a client fails to
        close down gracefully within 30 seconds.

2015-01-19  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* GNUmakefile.preamble: Fix wrong option letter in sed command.

2015-01-15  Richard Frith-Macdonald <rfm@gnu.org>

        * EcAlarmDestination.m: When shutting down, only wait for the
	background thread first time ... otherwise we could get into a
	recursive loop calling the -shutdown method while
	waiting for shutdown to complete.

2015-01-07  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac:
	* GNUMakefile.preamble:
	Filter out fstack-protect-strong from snmp cflags because clang
	doesn't support it.

2014-11-28  Richard Frith-Macdonald <rfm@gnu.org>

	* EcAlarmSinkSNMP.m: Fix incorrect OID setup for alarm table in
	SNMP agent.

2014-11-27  Richard Frith-Macdonald <rfm@gnu.org>

	* EcUserDefaults.m: The -doubleForKey: method was commented out!
	Restore it.

2014-11-26  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.m: Make -cmdLastIP, -cmdLastOP (and their setters)
	thread-safe.
